apps/nix-cache/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: ${nix_cache_service_name}
  namespace: ${nix_cache_namespace}
subsets:
  - addresses:
      - ip: ${nix_cache_upstream_ip}
    ports:
      - name: http
        port: ${nix_cache_service_port}
        protocol: TCP
