apps/nix-cache/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${nix_cache_service_name}
  namespace: ${nix_cache_namespace}
spec:
  ports:
    - name: http
      port: ${nix_cache_service_port}
      protocol: TCP
      targetPort: ${nix_cache_service_port}
