apps/nix-cache/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${nix_cache_service_name}
  namespace: ${nix_cache_namespace}
  annotations:
    cert-manager.io/cluster-issuer: ${default_cluster_issuer}
    external-dns.kubernetes.io/target: ${cloudflare_tunnel_hostname}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: ${nix_cache_namespace}-nix-cache-attic-homelab-prefix@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: nix${public_host_suffix}.${delegating_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${nix_cache_service_name}
                port:
                  number: ${nix_cache_service_port}
  tls:
    - secretName: nix-cache-tls
      hosts:
        - nix${public_host_suffix}.${delegating_domain}
